add twitter feed

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <img id="mobile-img" src="images/zeinalipour.small.jpg" width="200" border="0" height="250" alt=""></a>
         </div>
         <div align="left" class="col-md-4">
-            <h3>Demetris Zeinalipour
+            <h3>Nicholas Voss
                 <h5>Ph.D. Student Univ. of South Florida, USA</h5></h3>
 
             <h4>Graduate Assistant<br>
@@ -143,18 +143,8 @@
             </h4>
         </div>
 
-        <i class="twittertop" style="display:none;" id="t1">
-        <div id="news" tyle="text-align: left"  class="col-md-5">&nbsp;
-            <center><a class="twitter-timeline" href="https://twitter.com/snipe28814" data-chrome="nofooter" data-widget-id="346662554203992065">Tweets
-                by @snipe28814</a>
-            <script>!function (d, s, id) {
-                var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
-                if (!d.getElementById(id)) {
-                    js = d.createElement(s);
-                    js.id = id;
-                    js.src = p + "://platform.twitter.com/widgets.js";
-                    fjs.parentNode.insertBefore(js, fjs);
-                }
+        <a class="twitter-timeline" href="https://twitter.com/snipe28814">Tweets by snipe28814</a>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
             }(document, "script", "twitter-wjs");</script></center>
         </div>
         </i>
