--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
 <section id="home" style="margin-top:40px">
 <div class="container">
         <div align="left" class="col-md-3">
-            <a target="_blank" href="http://www.cs.ucy.ac.cy/~dzeina/zeinalipour.jpg">
-                <img id="mobile-img" src="images/zeinalipour.small.jpg" width="200" border="0" height="250" alt=""></a>
+            <a target="_blank" href="http://hennarot.forest.usf.edu/main/depts/geosci/students/nvoss/">
+                <img id="mobile-img" src="images/nickHeadShot.jpg" width="200" border="0" height="250" alt=""></a>
         </div>
         <div align="left" class="col-md-4">
             <h3>Nicholas Voss
