--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </h4>
         </div>
 
-        <a class="twitter-timeline" href="https://twitter.com/snipe28814">Tweets by snipe28814</a>
+        <center><a class="twitter-timeline" href="https://twitter.com/snipe28814">Tweets by snipe28814</a>
         <script>!function (d, s, id) {
     var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
     if (!d.getElementById(id)) {
