--- a/index.html
+++ b/index.html
@@ -143,15 +143,8 @@
             </h4>
         </div>
 
-        <center><a class="twitter-timeline" href="https://twitter.com/snipe28814">Tweets by snipe28814</a>
-        <script>!function (d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
-    if (!d.getElementById(id)) {
-        js = d.createElement(s);
-        js.id = id;
-        js.src = p + "://platform.twitter.com/widgets.js";
-        fjs.parentNode.insertBefore(js, fjs);
-            }(document, "script", "twitter-wjs");</script></center>
+        <center><a class="twitter-timeline" data-width="220" data-height="200" data-theme="dark" data-link-color="#19CF86" href="https://twitter.com/snipe28814">Tweets by snipe28814</a>
+          <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
         </i>
 
