--- a/index.html
+++ b/index.html
@@ -143,10 +143,21 @@
             </h4>
         </div>
 
-        <center><a class="twitter-timeline" data-width="220" data-height="200" data-theme="dark" data-link-color="#19CF86" href="https://twitter.com/snipe28814">Tweets by snipe28814</a>
-          <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>
-        </i>
+        <i class="twittertop" style="display:none;" id="t1">
+      <div id="news" tyle="text-align: left"  class="col-md-5">&nbsp;
+          <center><a class="twitter-timeline" data-width="220" data-height="200" data-theme="dark" data-link-color="#19CF86" href="https://twitter.com/snipe28814">Tweets by snipe28814</a>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+          <script>!function (d, s, id) {
+              var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
+              if (!d.getElementById(id)) {
+                  js = d.createElement(s);
+                  js.id = id;
+                  js.src = p + "://platform.twitter.com/widgets.js";
+                  fjs.parentNode.insertBefore(js, fjs);
+              }
+          }(document, "script", "twitter-wjs");</script></center>
+      </div>
+      </i>
 
         <!--<p><a href="#" class="btn btn-primary">More &raquo;</a></p>-->
         <i class="expandshow" style="display:none;" id="tab-1">
@@ -202,8 +213,8 @@
             <hr class="star-primary">
 
             <h2>News</h2>
-            <center><a class="twitter-timeline" href="https://twitter.com/dmslucy" data-chrome="nofooter" data-widget-id="346662554203992065">Tweets
-                by @dmslcy</a>
+            <center><a class="twitter-timeline" href="https://twitter.com/snipe28814" data-chrome="nofooter" data-widget-id="346662554203992065">Tweets
+                by @snipe28814</a>
             <script>!function (d, s, id) {
                 var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
                 if (!d.getElementById(id)) {
