--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <span><a href="#"><img border="0" width="170" src="images/csucy.png"/></a></span>
+            <span><a href="#"><img border="0" width="170" src="images/banner-topright.png"/></a></span>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -122,7 +122,7 @@
 <div class="container">
         <div align="left" class="col-md-3">
             <a target="_blank" href="http://hennarot.forest.usf.edu/main/depts/geosci/students/nvoss/">
-                <img id="mobile-img" src="images/nickHeadShot.jpg" width="200" border="0" height="250" alt=""></a>
+                <img id="mobile-img" src="images/nickHeadShot.jpg" width="200" border="0" height="200" alt=""></a>
         </div>
         <div align="left" class="col-md-4">
             <h3>Nicholas Voss
