--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <span><a href="#"><img border="0" width="170" src="images/banner-topright.png"/></a></span>
+            <span><a href="#"><img border="0" width="170" src="images/banner-topleft.png"/></a></span>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
