--- a/index.html
+++ b/index.html
@@ -246,18 +246,15 @@
             <h2>Selected Publications <a href="publications/" class="btn btn-primary">All Publications&raquo;</a></h2>
             <h4>
             <span class="label label-warning">
-                <a target="_blank" href="https://en.wikipedia.org/wiki/H-index"><font color=white>h-index</font></a>: 21
+                <a target="_blank" href="https://en.wikipedia.org/wiki/H-index"><font color=white>h-index</font></a>: 2
             </span>&nbsp;
             <span class="label label-warning">
-               <a target="_blank" href="https://scholar.google.com/citations?user=HCxwGIkAAAAJ&hl=en"><font color=white>Citations</font></a>: 2041
+               <a target="_blank" href="https://scholar.google.com/citations?user=-Qn9ezMAAAAJ&hl=en&oi=ao"><font color=white>Citations</font></a>: 31
             </span>&nbsp;
-            <span class="label label-warning">
-                <a target="_blank" href="https://en.wikipedia.org/wiki/Erd&ouml;s_number"><font color="white">Erd&ouml;s #</font></a>: 3
-            </span>
             </h4>
 
             <ul>
-                 <li><span class="label label-success">Elsevier InfoSys'16</span> <a target="_blank" href="http://www.cs.ucy.ac.cy/~dzeina/papers/infosys16-proxplus.pdf">"Crowdsourcing Emergency Data in Non-Operational Cellular Networks"</a>, Georgios Chatzimilioudis, Constantinos Costa, Demetrios Zeinalipour-Yazti and Wang-Chien Lee, <b>Information Systems (InfoSys'16)</b>, Elsevier Science Ltd., Vol. xx, Iss. x, pp. x-x, Oxford UK, 2016. <font color="red">(in press)</font>.</li>
+                 <li><span class="label label-success">G3 '16</span> <a target="_blank" href="https://www.researchgate.net/profile/Rocco_Malservisi/publication/277931360_Multiscale_postseismic_behavior_on_a_megathrust_The_2012_Nicoya_earthquake_Costa_Rica/links/558d23b108aee43bf6ae67fb.pdf">"Malservisi, Rocco, et al. "Multiscale postseismic behavior on a megathrust: The 2012 Nicoya earthquake, Costa Rica." Geochemistry, Geophysics, Geosystems 16.6 (2015): 1848-1864.</font>.</li>
 
             </ul>
             <p><a href="publications/" class="btn btn-primary">All Publications &raquo;</a>
@@ -279,7 +276,13 @@
             <hr class="star-primary">
             <h2>Courses <a href="teaching.html" class="btn btn-primary">More &raquo;</a></h2>
             <ul>
-                <li><span class="label label-success">EPL646</span> <a href="http://www.cs.ucy.ac.cy/~dzeina/courses/epl646/">Advanced Topics in Databases</a> (Fall)</li>
+                <li><span class="label label-success"></span> <a href="">Naturual Hazards</a> (Fall 2016-Spring 2017)</li>
+                <li><span class="label label-success"></span> <a href="">Physics of the Solid Earth</a> (Fall 2014-Spring 2017)</li>
+                <li><span class="label label-success">E</span> <a href="">Introduction to Physical Geology Laboratory </a> (Fall 2013-Spring 2014)</li>
+            </ul>
+            </ul>
+
+            </ul>
             </ul>
             </div>
         </div>
@@ -307,10 +310,10 @@
            <span class="label label-success">Conference Session Orgianizer</span>
            <ul>
                <li>
-                   <b>ACM SIGMOD:</b>
-                   <a href="http://www.sigmod2015.org/org_sigmod_pc.shtml" target="_blank"><b>2015</b></a>,
+                   <b>IASPI Latin America: Slow Slip Events:</b>
+                   <a href="http://www.iaspei.org/commissions/latin-american-and-caribbean-seismological-commission" target="_blank"><b>2016</b></a>,
 
-                   <i>[ACM's Management of Data Conference]</i>
+                   <i>[Earthquake and Seismology Research]</i>
                </li>
             </ul>
 
