remove useless tabs

--- a/index.html
+++ b/index.html
@@ -87,13 +87,6 @@
                     <a onclick="javascript:reset_menus();$('#tab-6-content').show();" href="#service">Service</a>
                 </li>
                 <li class="page-scroll">
-                <a onclick="javascript:reset_menus();$('#tab-7-content').show();" href="#advising">Advising</a>
-                </li>
-                <li class="page-scroll">
-                    <a target="_blank" href="http://dmsl.cs.ucy.ac.cy/projects.php">Grants</a>
-                </li>
-
-                <li class="page-scroll">
                     <a onclick="javascript:reset_menus();$('#tab-9-content').show();" href="#contact">Contact</a>
                 </li>
                 <li class="page-scroll">
@@ -310,7 +303,7 @@
            <span class="label label-success">Conference Session Orgianizer</span>
            <ul>
                <li>
-                   <b>IASPI Latin America: Slow Slip Events:</b>
+                   <b>IASPEI Latin America: Slow Slip Events:</b>
                    <a href="http://www.iaspei.org/commissions/latin-american-and-caribbean-seismological-commission" target="_blank"><b>2016</b></a>,
 
                    <i>[Earthquake and Seismology Research]</i>
