--- a/cv.html
+++ b/cv.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>[ Zeinalipour | CV ]</title>
+<title>[ Voss | CV ]</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- Font Awesome Icons -->
@@ -110,7 +110,7 @@
 
 <section id="tree" style="margin-top:50px">
     <div class="container">
-        <a href="index.html">Zeinalipour</a> > Curriculum Vitae
+        <a href="index.html">Voss</a> > Curriculum Vitae
     </div>
 </section>
 
@@ -126,23 +126,23 @@
     <P>
     <DIV ALIGN="CENTER">
         <TABLE CELLPADDING=3 WIDTH="100%">
-            <TR><TD ALIGN="LEFT">&nbsp;</TD><TD ALIGN="LEFT">Department of Computer Science</TD>
-                <TD ALIGN="RIGHT">Tel:   +357-22-892755</TD>
+            <TR><TD ALIGN="LEFT">&nbsp;</TD><TD ALIGN="LEFT">Department of Geoscience/TD>
+                <TD ALIGN="RIGHT">Tel:   </TD>
             </TR>
             <TR><TD ALIGN="LEFT">&nbsp;</TD><TD ALIGN="LEFT">University of Cyprus</TD>
-                <TD ALIGN="RIGHT">Fax:   +357-22-892701</TD>
+                <TD ALIGN="RIGHT">Fax:   </TD>
             </TR>
             <TR><TD ALIGN="LEFT">&nbsp;</TD><TD ALIGN="LEFT">1 University Ave., P.O. Box 20537,</TD>
-                <TD ALIGN="RIGHT"><TT>dzeina@cs.ucy.ac.cy</TT></TD>
+                <TD ALIGN="RIGHT"><TT>nvoss@mail.usd.edy</TT></TD>
             </TR>
-            <TR><TD ALIGN="LEFT">&nbsp;</TD><TD ALIGN="LEFT">1678 Nicosia, Cyprus</TD>
-                <TD ALIGN="RIGHT"><TT>http://www.cs.ucy.ac.cy/~dzeina/</TT></TD>
+            <TR><TD ALIGN="LEFT">&nbsp;</TD><TD ALIGN="LEFT">4202 E Fowler Ave</TD>
+                <TD ALIGN="RIGHT"><TT>h</TT></TD>
             </TR>
             <TR><TD ALIGN="LEFT">&nbsp;</TD><TD ALIGN="LEFT">&nbsp;</TD>
                 <TD ALIGN="RIGHT">&nbsp;</TD>
             </TR>
-            <TR><TD ALIGN="LEFT">&nbsp;</TD><TD ALIGN="LEFT"><B>Data Management Systems Laboratory (DMSL)</B></TD>
-                <TD ALIGN="RIGHT"><TT>http://dmsl.cs.ucy.ac.cy/</TT></TD>
+            <TR><TD ALIGN="LEFT">&nbsp;</TD><TD ALIGN="LEFT"><B>Geodest Laboratory</B></TD>
+                <TD ALIGN="RIGHT"><TT>http://labs.cas.usf.edu/geodesy/</TT></TD>
             </TR>
         </TABLE>
     </DIV>
@@ -214,10 +214,7 @@
         PUBLICATIONS</A>
     </H1>
     <FONT SIZE="+2"><B>Google Scholar Citations:31;
-        h-index<A NAME="tex2html1"
-            HREF="#foot60"><SUP>1</SUP></A>: 21;
-        i10-index<A NAME="tex2html2"
-            HREF="#foot61"><SUP>2</SUP></A>: 38</B></FONT>
+        </FONT>
 
     <P>
 
