--- a/cv.html
+++ b/cv.html
@@ -60,7 +60,7 @@
                     <li><a href="index.html#intro">Introduction</a></li>
                         <li><a href="bio.html">Short Biography</a></li>
                         <li><a href="cv.html">CV (Web)</a></li>
-                        <li><a target="_blank" href="zeinalipour.pdf">CV (PDF)</a></li>
+                        <li><a target="_blank" href="Resume2017.pdf">CV (PDF)</a></li>
                     </ul>
                 </li>
                 <li class="page-scroll">
