--- a/cv.html
+++ b/cv.html
@@ -47,7 +47,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <span><a href="#"><img border="0" width="170" src="images/banner-topleft.png"/></a></span>
+            <span><a href="#"><img border="0" width="150" src="images/banner-topleft.png"/></a></span>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -129,19 +129,19 @@
             <TR><TD ALIGN="LEFT">&nbsp;</TD><TD ALIGN="LEFT">Department of Geoscience/TD>
                 <TD ALIGN="RIGHT">Tel:   </TD>
             </TR>
-            <TR><TD ALIGN="LEFT">&nbsp;</TD><TD ALIGN="LEFT">University of Cyprus</TD>
+            <TR><TD ALIGN="LEFT">&nbsp;</TD><TD ALIGN="LEFT">University of South Florida</TD>
                 <TD ALIGN="RIGHT">Fax:   </TD>
             </TR>
-            <TR><TD ALIGN="LEFT">&nbsp;</TD><TD ALIGN="LEFT">1 University Ave., P.O. Box 20537,</TD>
-                <TD ALIGN="RIGHT"><TT>nvoss@mail.usd.edy</TT></TD>
+            <TR><TD ALIGN="LEFT">&nbsp;</TD><TD ALIGN="LEFT">1 4202, E Fowler Ave,</TD>
+                <TD ALIGN="RIGHT"><TT>nvoss@mail.usf.edu</TT></TD>
             </TR>
-            <TR><TD ALIGN="LEFT">&nbsp;</TD><TD ALIGN="LEFT">4202 E Fowler Ave</TD>
+            <TR><TD ALIGN="LEFT">&nbsp;</TD><TD ALIGN="LEFT">Tampa, Fl</TD>
                 <TD ALIGN="RIGHT"><TT>h</TT></TD>
             </TR>
             <TR><TD ALIGN="LEFT">&nbsp;</TD><TD ALIGN="LEFT">&nbsp;</TD>
                 <TD ALIGN="RIGHT">&nbsp;</TD>
             </TR>
-            <TR><TD ALIGN="LEFT">&nbsp;</TD><TD ALIGN="LEFT"><B>Geodest Laboratory</B></TD>
+            <TR><TD ALIGN="LEFT">&nbsp;</TD><TD ALIGN="LEFT"><B>Geodesy Laboratory</B></TD>
                 <TD ALIGN="RIGHT"><TT>http://labs.cas.usf.edu/geodesy/</TT></TD>
             </TR>
         </TABLE>
