fix pubs format

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                    <li><span class="label label-success">JGR '17</span> <a target="_blank" href="http://onlinelibrary.wiley.com/doi/10.1002/2016JB013741/full">"Voss, Nicholas, et al. "Slow slip events in the early part of the earthquake cycle" J. Geophys. Res. Solid Earth, 122, doi:10.1002/2016JB013741.</font>.</li>
 
             </ul>
-
+            </span>&nbsp;
             <span class="label label-warning">
                 <a target="_blank" href="https://en.wikipedia.org/wiki/H-index"><font color=white>h-index</font></a>: 2
             </span>&nbsp;
