fix pubs format

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
             <p><a href="bio.html" class="btn-sm btn-primary">Short Biography &raquo;</a>
                <a href="cv.html" class="btn-sm btn-primary">CV (Web)&raquo;</a>
-               <a href="zeinalipour.pdf" class="btn-sm btn-primary">CV (PDF)&raquo;</a>
+               <a href="Resume2017" class="btn-sm btn-primary">CV (PDF)&raquo;</a>
             </div>
 
         </div>
